# tensorflow-yolov4-tflite

./: .gitignore  benchmarks.py  convert_tflite.py  convert_trt.py  detect.py  detectvideo.py  evaluate.py  pyproject.toml  save_model.py  train.py
core/: config.py  dataset.py  utils.py  yolov4.py
