[tool.poetry]
name = "tensorflow-yolov4-tflite"
version = "0.1.0"
description = ""
authors = ["oussama <oussama.ennafii@upciti.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~3.7"
opencv-python = "~4.1.1.26"
tensorflow = "~2.3.4"
easydict = "^1.9"
matplotlib = "~3.5.3"
Pillow = "~9.2.0"
absl-py = "~0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
